@@ -8,7 +8,6 @@ Once the configuration is decided, the whole job stops if any intermediate job f
 from PyJobTransformsCore.trf import Author,JobReport
 from RecJobTransforms.RAWtoESD_trf import RAWtoESDJobTransform
 from RecJobTransforms.RDOtoBS_trf import RDOtoBSJobTransform
-from RecJobTransforms.ESDtoESD_trf import ESDtoESDJobTransform
 from PATJobTransforms.MergePool_trf import MergePoolJobTransform
 from RecJobTransforms.ESDtoAOD_trf import ESDtoAODJobTransform
 from PATJobTransforms.ESDtoDPD_trf import ESDtoDPDJobTransform
@@ -22,7 +21,7 @@ from PATJobTransforms.BaseOfCompositeTrf import BaseOfCompositeTrf
 
 #Note ListOfDefaultPositionalKeys needs to be maintained by hand, to support 'grep' from ProdSys
 
-ListOfDefaultPositionalKeys=['inputBSFile','inputRDOFile','inputEVNTFile','inputESDFile','inputAODFile','maxEvents','skipEvents','RunNumber','autoConfiguration','preInclude','postInclude','preExec','postExec','topOptions','DBRelease','conditionsTag','geometryVersion','beamType','AMITag','outputBSFile','outputESDFile','outputCBNTFile','outputNTUP_TRKVALIDFile','outputNTUP_MUONCALIBFile','outputTAG_COMMFile','outputTAGFile','outputAODFile','triggerConfig','outputHISTFile','outputNTUP_MUFASTFile','outputNTUP_TRIGFile','outputHIST_TRIGEXPERTFile','outputDESDM_EGAMMAFile','outputDESD_PHOJETFile','outputDESD_SGLELFile','outputDESDM_MUONFile','outputDESD_SGLMUFile','outputDESDM_CALJETFile','outputDESD_CALJETFile','outputDESDM_TRACKFile','outputDESD_METFile','outputDESDM_METFile','outputDESD_MBIASFile','outputDESD_PIXELCOMMFile','outputDESD_IDCOMMFile','outputDESD_CALOCOMMFile','outputDESD_TILECOMMFile','outputDESD_MUONCOMMFile','outputDESD_HIRAREFile','outputDESDM_HIRAREFile','outputDESDM_RPVLLFile','outputDESDM_RPVLLCCFile','outputD2ESD_JPSIUPSMMFile','outputD2ESD_ZMMFile','outputD2ESD_WENUFile','outputD2ESD_WMUNUFile','outputDAODM_SGLEMFile','outputDAODM_SGLMUFile','outputDAODM_SGLPHFile','outputDAODM_SGLTAUFile','outputDAOD_2EMFile','outputDAOD_2PHFile','outputDAOD_2MUFile','outputDAOD_EMMUFile','outputDAOD_EMTAUFile','outputDAOD_MUTAUFile','outputDAOD_EMMETFile','outputDAOD_MUMETFile','outputDAOD_JETMETFile','outputDAOD_EMJETFile','outputDAOD_MUJETFile','outputDAOD_TAUJETFile','outputD2AODM_TOPELFile','outputD2AODM_TOPMUFile','outputD2AODM_TOPQCDELFile','outputD2AODM_TOPQCDMUFile','outputD2AODM_TOPQCDJ1File','outputD2AODM_TOPQCDJ2File','outputD2AODM_TOPJETFile','outputD2AODM_TOPEJETFile','outputNTUP_TOPFile','outputNTUP_TOPVALFile','outputNTUP_SGTOPFile','outputNTUP_TOPELFile','outputNTUP_TOPMUFile','outputNTUP_TOPJETFile','outputNTUP_TOPEJETFile','outputDAOD_ONIAMUMUFile','outputDESD_COLLCANDFile','outputDAOD_EGLOOSEFile','outputDAOD_PHLOOSEFile','outputD2ESD_DIPHOFile','outputDESDM_DIPHOFile','outputD2AOD_DIPHOFile','outputDAOD_ELLOOSE18File','outputD2AOD_ELLOOSE18File','outputDAOD_MUFile','outputDRAW_ZEEFile','outputDRAW_WENUFile','outputDRAW_ZMUMUFile','outputDRAW_WMUNUFile','outputNTUP_BTAGFile','outputNTUP_BTAGD3PDFile','outputNTUP_EGAMMAFile','outputNTUP_MINBIASFile','outputNTUP_PROMPTPHOTFile','outputNTUP_JETMETFile','outputDESDM_BEAMSPOTFile','outputNTUP_SMWZFile','outputNTUP_SMWZSOFTFile','outputNTUP_TRTFile','outputNTUP_HECNOISEFile','outputNTUP_SUSYFile','outputNTUP_SMEWFile','outputDAOD_SUSYJETSFile','outputDAOD_SUSYMUONSFile','outputDAOD_SUSYEGAMMAFile','outputNTUP_HIFile','outputD2ESDM_TRKJETFile','--ignoreerrors','--athenaopts','--omitvalidation','tmpESD','tmpAOD','extraParameter','outputDAOD_RNDMFile','outputNTUP_MCPFile','outputDAOD_2LHSG2File','outputDAOD_4LHSG2File','outputDAOD_HSG2File','outputNTUP_SCTFile','outputNTUP_HIGHMULTFile','outputNTUP_1LHSG2File','outputNTUP_2LHSG2File','outputNTUP_HSG2File','outputNTUP_ENHBIASFile','outputNTUP_L1CALOFile','outputNTUP_L1CALOPROBFile','outputNTUP_FASTMONFile','outputNTUP_PHOTONFile','outputNTUP_BKGDFile','outputNTUP_SMWENUFile','outputNTUP_SMZEEFile','outputNTUP_SMDYEEFile','outputNTUP_SMBKGEFile','outputNTUP_SMWMUNUFile','outputNTUP_SMZMUMUFile','outputNTUP_SMDYMUMUFile','outputNTUP_SMBKGMUFile','outputNTUP_SMDILEPFile','outputNTUP_TRIGMUFile','outputNTUP_TRIGBJETFile','outputHIST_PHYSVALMONFile','outputNTUP_TRUTHFile','outputNTUP_LARNOISEFile','inputTAGFile','outputNTUP_SMQCDFile','outputNTUP_L1TGCFile','outputNTUP_HSG5WHFile','outputNTUP_HSG5ZHLLFile','outputNTUP_HSG5ZHMETFile','outputNTUP_HSG5GAMHFile','outputNTUP_HSG5ZBBFile']
+ListOfDefaultPositionalKeys=['inputBSFile','inputRDOFile','inputEVNTFile','inputESDFile','inputAODFile','maxEvents','skipEvents','RunNumber','autoConfiguration','preInclude','postInclude','preExec','postExec','topOptions','DBRelease','conditionsTag','geometryVersion','beamType','AMITag','outputBSFile','outputESDFile','outputCBNTFile','outputNTUP_TRKVALIDFile','outputNTUP_MUONCALIBFile','outputTAG_COMMFile','outputTAGFile','outputAODFile','triggerConfig','outputHISTFile','outputNTUP_MUFASTFile','outputNTUP_TRIGFile','outputHIST_TRIGEXPERTFile','outputDESDM_EGAMMAFile','outputDESD_PHOJETFile','outputDESD_SGLELFile','outputDESDM_MUONFile','outputDESD_SGLMUFile','outputDESDM_CALJETFile','outputDESD_CALJETFile','outputDESDM_TRACKFile','outputDESD_METFile','outputDESDM_METFile','outputDESD_MBIASFile','outputDESD_PIXELCOMMFile','outputDESD_IDCOMMFile','outputDESD_CALOCOMMFile','outputDESD_TILECOMMFile','outputDESD_MUONCOMMFile','outputDESD_HIRAREFile','outputDESDM_HIRAREFile','outputDESDM_RPVLLFile','outputDESDM_RPVLLCCFile','outputD2ESD_JPSIUPSMMFile','outputD2ESD_ZMMFile','outputD2ESD_WENUFile','outputD2ESD_WMUNUFile','outputDAODM_SGLEMFile','outputDAODM_SGLMUFile','outputDAODM_SGLPHFile','outputDAODM_SGLTAUFile','outputDAOD_2EMFile','outputDAOD_2PHFile','outputDAOD_2MUFile','outputDAOD_EMMUFile','outputDAOD_EMTAUFile','outputDAOD_MUTAUFile','outputDAOD_EMMETFile','outputDAOD_MUMETFile','outputDAOD_JETMETFile','outputDAOD_EMJETFile','outputDAOD_MUJETFile','outputDAOD_TAUJETFile','outputD2AODM_TOPELFile','outputD2AODM_TOPMUFile','outputD2AODM_TOPQCDELFile','outputD2AODM_TOPQCDMUFile','outputD2AODM_TOPQCDJ1File','outputD2AODM_TOPQCDJ2File','outputD2AODM_TOPJETFile','outputD2AODM_TOPEJETFile','outputNTUP_TOPFile','outputNTUP_TOPVALFile','outputNTUP_SGTOPFile','outputNTUP_TOPELFile','outputNTUP_TOPMUFile','outputNTUP_TOPJETFile','outputNTUP_TOPEJETFile','outputDAOD_ONIAMUMUFile','outputDESD_COLLCANDFile','outputDAOD_EGLOOSEFile','outputDAOD_PHLOOSEFile','outputD2ESD_DIPHOFile','outputDESDM_DIPHOFile','outputD2AOD_DIPHOFile','outputDAOD_ELLOOSE18File','outputD2AOD_ELLOOSE18File','outputDAOD_MUFile','outputDRAW_ZEEFile','outputDRAW_WENUFile','outputDRAW_ZMUMUFile','outputDRAW_WMUNUFile','outputNTUP_BTAGFile','outputNTUP_BTAGD3PDFile','outputNTUP_EGAMMAFile','outputNTUP_MINBIASFile','outputNTUP_PROMPTPHOTFile','outputNTUP_JETMETFile','outputDESDM_BEAMSPOTFile','outputNTUP_SMWZFile','outputNTUP_SMWZSOFTFile','outputNTUP_TRTFile','outputNTUP_HECNOISEFile','outputNTUP_SUSYFile','outputNTUP_SMEWFile','outputDAOD_SUSYJETSFile','outputDAOD_SUSYMUONSFile','outputDAOD_SUSYEGAMMAFile','outputNTUP_HIFile','outputD2ESDM_TRKJETFile','--ignoreerrors','--athenaopts','--omitvalidation','tmpESD','tmpAOD','extraParameter','outputDAOD_RNDMFile','outputNTUP_MCPFile','outputDAOD_2LHSG2File','outputDAOD_4LHSG2File','outputDAOD_HSG2File','outputNTUP_SCTFile','outputNTUP_HIGHMULTFile','outputNTUP_1LHSG2File','outputNTUP_2LHSG2File','outputNTUP_HSG2File','outputNTUP_ENHBIASFile','outputNTUP_L1CALOFile','outputNTUP_L1CALOPROBFile','outputNTUP_FASTMONFile','outputNTUP_PHOTONFile','outputNTUP_BKGDFile','outputNTUP_SMWENUFile','outputNTUP_SMZEEFile','outputNTUP_SMDYEEFile','outputNTUP_SMBKGEFile','outputNTUP_SMWMUNUFile','outputNTUP_SMZMUMUFile','outputNTUP_SMDYMUMUFile','outputNTUP_SMBKGMUFile','outputNTUP_SMDILEPFile','outputNTUP_TRIGMUFile','outputNTUP_TRIGBJETFile','outputHIST_PHYSVALMONFile','outputNTUP_TRUTHFile','outputNTUP_LARNOISEFile','inputTAGFile','outputNTUP_SMQCDFile','outputNTUP_L1TGCFile','outputNTUP_HSG5WHFile','outputNTUP_HSG5ZHLLFile','outputNTUP_HSG5ZHMETFile','outputNTUP_HSG5GAMHFile','outputNTUP_HSG5ZBBFile','outputDESD_ZEEFile','outputDESD_WENUFile','outputDESD_ZMUMUFile','outputDESD_WMUNUFile','outputDAOD_ZEEFile','outputDAOD_WENUFile','outputDAOD_ZMUMUFile','outputDAOD_WMUNUFile']
 
 #Default values of input/output types, for standard tests now set in PATJobTransforms/python/DefaultInputs.py
 
@@ -138,15 +137,7 @@ class FlexibleRecoTransform( BaseOfCompositeTrf ):
         if(allOK and self.SubStepIsExecuted('e2e')):
             doMerge=True
             dic=self.dicESDToESD.copy()
-            print "ESDtoESD dic:",dic
-            if 'preExec' in dic:
-                if dic['preExec'].find("rec.doESD.set_Value_and_Lock(True)")>0 or dic['preExec'].find("rec.doESD=True")>0:
-                    print "user wants re-reconstruct on ESD !!!"
-                    doMerge=False
-            if doMerge:
-                ESD = MergePoolJobTransform(dic)
-            else:
-                ESD = ESDtoESDJobTransform(dic)
+            ESD = MergePoolJobTransform(dic)
             ESD._lastInChain=False
             ESD.setParent(self)
             ESD.setJobReportOptions('Summary')
